add link to sponsorship doc

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -39,4 +39,5 @@ html(prefix="og: http://ogp.me/ns#")
 						.text Remind Me!
 						.icon
 				.confirmation-text &nsbp;
+		a.sponsors-link(target="_blank" href="sponsorship.pdf") Interested in becoming a sponsor?
 	script(src="js/main.js" type="text/javascript")
