--- a/jade/index.jade
+++ b/jade/index.jade
@@ -39,5 +39,8 @@ html(prefix="og: http://ogp.me/ns#")
 						.text Remind Me!
 						.icon
 				.confirmation-text &nsbp;
-		a.sponsors-link(target="_blank" href="sponsorship.pdf") Interested in becoming a sponsor?
+		.footer-links
+			a(target="_blank" href="sponsorship.pdf") Interested in becoming a sponsor?
+			.bullet &bull;
+			a(target="_blank" href="https://hacktj.org/2015") Learn about last year's HackTJ
 	script(src="js/main.js" type="text/javascript")
