--- a/jade/index.jade
+++ b/jade/index.jade
@@ -40,7 +40,7 @@ html(prefix="og: http://ogp.me/ns#")
 						.icon
 				.confirmation-text &nsbp;
 		.footer-links
-			a(target="_blank" href="sponsorship.pdf") Interested in becoming a sponsor?
+			a(target="_blank" href="mailto:sponsor@hacktj.org") Interested in becoming a sponsor?
 			.bullet &bull;
 			a(target="_blank" href="https://hacktj.org/2015") Learn about last year's HackTJ
 	script(src="js/main.js" type="text/javascript")
